# acoustic-bot

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  flake.nix
.github/workflows/: build-image.yml  image.yml
nix/: nixosModule.nix  package.nix  shell.nix
src/: command_handler.rs  context.rs  dotenv.rs  main.rs  queue_store.rs
src/commands/: clear_queue.rs  mod.rs  play.rs  queue.rs  skip.rs
src/handlers/: command_handler.rs  mod.rs  track_end_handler.rs  voice_handler.rs
