[package]
name = "acoustic"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
reqwest = "0.12.2"
serenity = "0.12.5"
songbird = "0.6.0"
symphonia = { version = "0.5.2", features = ["mp3", "aac", "isomp4", "alac"] }
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

[lints.clippy]
pedantic = "warn"
unwrap_used = "warn"
